--- a/ex-common/pom.xml
+++ b/ex-common/pom.xml
@@ -3,22 +3,25 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
+	<groupId>com.hp.sh</groupId>
 	<artifactId>ex-common3</artifactId>
 	<packaging>jar</packaging>
     <description>exchange-common</description>
-
-	<parent>
-		<groupId>com.hp.sh</groupId>
-		<artifactId>ex-parent</artifactId>
-		<version>3.0.0</version>
-	</parent>
+	<version>3.0.0</version>
     
     <dependencies>
     
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
         <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
-            <version>3.2.0</version>
+			<groupId>com.gitee.hupadev</groupId>
+			<artifactId>hupa-base</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         
         <dependency>
@@ -34,5 +37,19 @@
         </dependency>
         
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<encoding>utf-8</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
