--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 			<artifactId>hupa-base</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
         
 		<dependency>
 			<groupId>org.mybatis.generator</groupId>
