--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -6,14 +6,9 @@ eureka.instance.ip-address=127.0.0.1
 feign.hystrix.enabled=false
 
 #mq
-spring.rabbitmq.host=192.168.0.63
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.listener.simple.acknowledge-mode=manual
-spring.rabbitmq.publisher-confirms=true
-spring.rabbitmq.publisher-returns=true
-spring.rabbitmq.template.mandatory=true
+rocketmq.enabled=true
+rocketmq.default.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
+rocketmq.default.consumerGroup=fund-account
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
