--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,6 @@
             <version>2.0.1</version>
         </dependency>
         
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -124,6 +119,12 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+			<groupId>com.hp.sh</groupId>
+			<artifactId>hp-rocketmq</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -181,6 +182,13 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>1.1.7</version>
         </dependency>
+
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
+		</dependency>
         
         <!-- 
 		<dependency>
