match smoke test ok

--- a/ex-pc-match/src/main/resources/application.properties
+++ b/ex-pc-match/src/main/resources/application.properties
@@ -1,44 +1,89 @@
-app.server.port=8053
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
+#app.server.port=8053
+#app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
+#
+##eureka
+#eureka.instance.ip-address=127.0.0.1
+#feign.hystrix.enabled=false
+#
+##mq
+#spring.rabbitmq.host=192.168.0.63
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#spring.rabbitmq.listener.simple.acknowledge-mode=manual
+#spring.rabbitmq.publisher-confirms=true
+#spring.rabbitmq.publisher-returns=true
+#spring.rabbitmq.template.mandatory=true
+#
+##Hikari
+#spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+#spring.datasource.hikari.primary.username=test
+#spring.datasource.hikari.primary.password=123456
+#
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.hikari.primary.minimum-idle=5
+#spring.datasource.hikari.primary.maximum-pool-size=15
+#spring.datasource.hikari.primary.auto-commit=true
+#spring.datasource.hikari.primary.idle-timeout=30000
+#spring.datasource.hikari.primary.pool-name=DatebookHikariCP
+#spring.datasource.hikari.primary.max-lifetime=1800000
+#spring.datasource.hikari.primary.connection-timeout=30000
+#spring.datasource.hikari.primary.connection-test-query=SELECT 1
+#spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
+#
+##redis
+#spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=
+#spring.redis.pool.max-active=1000
+#spring.redis.pool.max-wait=5000
+#spring.redis.pool.max-idle=256
+#spring.redis.pool.min-idle=2
+#spring.redis.timeout=2000ms
 
-#eureka
-eureka.instance.ip-address=127.0.0.1
-feign.hystrix.enabled=false
+suffix=v3
 
-#mq
-spring.rabbitmq.host=192.168.0.63
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.listener.simple.acknowledge-mode=manual
-spring.rabbitmq.publisher-confirms=true
-spring.rabbitmq.publisher-returns=true
-spring.rabbitmq.template.mandatory=true
+id.dataCenterBits=2
+id.serverBits=8
+id.idTypeBits=5
+id.sequenceBits=7
 
-#Hikari
-spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=test
-spring.datasource.hikari.primary.password=123456
+rmq.nameSrvAddr=192.168.0.47:8678;192.168.0.48:8678
+rmq.nameSpace=gte_${suffix}
 
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.primary.minimum-idle=5
-spring.datasource.hikari.primary.maximum-pool-size=15
-spring.datasource.hikari.primary.auto-commit=true
-spring.datasource.hikari.primary.idle-timeout=30000
-spring.datasource.hikari.primary.pool-name=DatebookHikariCP
-spring.datasource.hikari.primary.max-lifetime=1800000
-spring.datasource.hikari.primary.connection-timeout=30000
-spring.datasource.hikari.primary.connection-test-query=SELECT 1
-spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
+pcmatch.id.dataCenterId=0
+pcmatch.id.serverId=31
+pcmatch.id.caller=pcmatch
 
-#redis
-spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.pool.max-active=1000
-spring.redis.pool.max-wait=5000
-spring.redis.pool.max-idle=256
-spring.redis.pool.min-idle=2
-spring.redis.timeout=2000ms
+pcmatch.supportAssetSymbol=BTC__BTC_USD,ETH__ETH_USD
+
+pcmatch.redis.hostName=192.168.0.68
+pcmatch.redis.password=456
+pcmatch.redis.port=16373
+pcmatch.redis.database=2
+pcmatch.redis.timeout=6000
+pcmatch.redis.minIdle=5
+pcmatch.redis.maxIdle=10
+pcmatch.redis.maxTotal=25
+pcmatch.redis.maxWaitMillis=2000
+pcmatch.redis.testOnBorrow=true
+pcmatch.redis.testOnReturn=true
+pcmatch.redis.testWhileIdle=true
+
+pcmatch.rmq.pcOrderConsumerGroupName=pcOrderMatchConsumer_${asset}_${symbol}
+pcmatch.rmq.pcOrderConsumerInstanceName=pcOrderMatchConsumer_${asset}_${symbol}_${pcmatch.id.serverId}
+pcmatch.rmq.matchPullTimeoutInMs=600000
+
+pcmatch.rmq.pcOrderProducerGroupName=pcOrder4Match
+pcmatch.rmq.pcOrderProducerInstanceName=pcOrder4Match_${pcmatch.id.serverId}
+pcmatch.rmq.pcOrderTopicNamePattern=pcOrder_${asset}__${symbol}
+pcmatch.rmq.pcMatchProducerGroupName=pcMatchProducer
+pcmatch.rmq.pcMatchProducerInstanceName=pcMatchProducer_${pcmatch.id.serverId}
+pcmatch.rmq.pcMatchTopicNamePattern=pcMatch_${asset}__${symbol}
+
+pcmatch.rediskey.pcOrderSnapshotRedisKeyPattern=pcOrderSnapshot:${asset}:${symbol}
+pcmatch.rediskey.pcOrderSentMqOffsetRedisKeyPattern=orderSentMqOffset:${asset}:${symbol}
+pcmatch.rediskey.pcBookChannelRedisKeyPattern=pc:book:${asset}:${symbol}
+pcmatch.rediskey.pcTradeChannelRedisKeyPattern=pc:trade:${asset}:${symbol}
