消息及各种改

--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -6,9 +6,12 @@ eureka.instance.ip-address=127.0.0.1
 feign.hystrix.enabled=false
 
 #mq
-rocketmq.enabled=true
-rocketmq.default.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
-rocketmq.default.consumerGroup=fund-account
+hp.rocketmq.enabled=true
+hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
+hp.rocketmq.namespace=gte_v3
+hp.rocketmq.instanceName=1
+hp.rocketmq.default_consumer.group=ex-pc-base
+hp.rocketmq.default_producer.group=ex-pc-base
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
