--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -6,9 +6,10 @@ eureka.instance.ip-address=127.0.0.1
 feign.hystrix.enabled=false
 
 #mq
-rocketmq.enabled=true
-rocketmq.default.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
-rocketmq.default.consumerGroup=fund-account
+hp.rocketmq.enabled=true
+hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
+hp.rocketmq.namespace=gte_v3
+hp.rocketmq.default.consumer.group=fund-account
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
