--- a/ex-pc-match/src/main/resources/application.properties
+++ b/ex-pc-match/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#app.server.port=8053
-#app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
+app.server.port=8053
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
 #
 ##eureka
 #eureka.instance.ip-address=127.0.0.1
