--- a/ex-pc-match/src/main/resources/application.properties
+++ b/ex-pc-match/src/main/resources/application.properties
@@ -43,6 +43,31 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
 #spring.redis.pool.min-idle=2
 #spring.redis.timeout=2000ms
 
+#Hikari
+#spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+#spring.datasource.hikari.primary.username=root
+#spring.datasource.hikari.primary.password=root1234
+#
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.hikari.primary.minimum-idle=5
+#spring.datasource.hikari.primary.maximum-pool-size=15
+#spring.datasource.hikari.primary.auto-commit=true
+#spring.datasource.hikari.primary.idle-timeout=30000
+#spring.datasource.hikari.primary.pool-name=DatebookHikariCP
+#spring.datasource.hikari.primary.max-lifetime=1800000
+#spring.datasource.hikari.primary.connection-timeout=30000
+#spring.datasource.hikari.primary.connection-test-query=SELECT 1
+#spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
+
+
+#mybatis.type-aliases-package=com.hp.sh.expv3.pc.module.trade.entity
+
+spring.datasource.url=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=root1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 suffix=v3
 
 id.dataCenterBits=2
@@ -58,6 +83,8 @@ pcmatch.id.serverId=31
 pcmatch.id.caller=pcmatch
 
 pcmatch.supportAssetSymbol=BTC__BTC_USD,ETH__ETH_USD
+
+pcmatch.trade.batchSize=2
 
 pcmatch.redis.hostName=192.168.0.68
 pcmatch.redis.password=456
