--- a/ex-common/pom.xml
+++ b/ex-common/pom.xml
@@ -36,6 +36,12 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
         
+		<dependency>
+		    <groupId>org.redisson</groupId>
+		    <artifactId>redisson</artifactId>
+		    <version>3.9.1</version>
+		</dependency>
+		        
 	</dependencies>
 
 	<build>
