--- a/ex-common/pom.xml
+++ b/ex-common/pom.xml
@@ -33,7 +33,13 @@
         <dependency>
 			<groupId>com.hp.sh</groupId>
 			<artifactId>hp-rocketmq</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-all</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
 		<dependency>
