--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>ex-pc-base-def</module>
 		<module>ex-pc-match</module>
 		<module>ex-pc-extend</module>
+		<module>ex-pc-extend-def</module>
 	</modules>
 
     <dependencies>
@@ -108,16 +109,6 @@
 			<version>2.9.2</version>
 		</dependency>
 		<!-- //springfox-swagger2 -->
-		
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-		
-        <dependency>
-            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-            <artifactId>jackson-jaxrs-json-provider</artifactId>
-        </dependency>
 
 		<dependency>
 			<groupId>com.zaxxer</groupId>
