修改mapper扫描包

--- a/ex-fund-account/src/main/resources/application.yml
+++ b/ex-fund-account/src/main/resources/application.yml
@@ -25,7 +25,7 @@ endpoints:
 
 mybatis: 
   config-location: classpath:mybatis/mybatis-config.xml
-  mapper-locations: classpath:mybatis/mapper/*.xml
+  mapper-locations: classpath:mybatis/mapper/*.xml,classpath:mybatis/mapper/extension/*.xml
   typeAliasesPackage: com.hp.sh.expv3.**.entity
 
 
