--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,18 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+			<groupId>com.hp.sh</groupId>
+			<artifactId>hp-rocketmq-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-all</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -133,6 +145,12 @@
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
+		
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.5.2</version>
+        </dependency>
 
 	</dependencies>
 
