--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?
 spring.datasource.hikari.primary.username=test
 spring.datasource.hikari.primary.password=123456
 
+#Hikari-primary
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
 spring.datasource.hikari.primary.maximum-pool-size=15
@@ -27,6 +28,13 @@ spring.datasource.hikari.primary.max-lifetime=1800000
 spring.datasource.hikari.primary.connection-timeout=30000
 spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
+
+#Hikari-second
+spring.datasource.hikari.second.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.second.username=test
+spring.datasource.hikari.second.password=123456
+
 
 #bys
 bys.server.host=http://192.168.0.13:7080/api/v1
@@ -42,3 +50,12 @@ spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
 spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
+spring.redis.database=6
+spring.redis.keyPrefix=xxx
+
+redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.poolConfig.maxTotal=1024
+redis.poolConfig.maxIdle=256
+redis.poolConfig.maxWaitMillis=1000
+redis.poolConfig.testOnBorrow=true
+redis.poolConfig.testOnReturn=true
