--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -40,3 +40,12 @@ spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
 spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
+spring.redis.database=7
+spring.redis.keyPrefix=xxx
+
+redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.poolConfig.maxTotal=1024
+redis.poolConfig.maxIdle=256
+redis.poolConfig.maxWaitMillis=1000
+redis.poolConfig.testOnBorrow=true
+redis.poolConfig.testOnReturn=true
