--- a/ex-pc-extend/pom.xml
+++ b/ex-pc-extend/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>com.hp.sh</groupId>
 			<artifactId>ex-pc-extend-def</artifactId>
-			<version>3.0.0</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		
 	</dependencies>
