--- a/ex-pc-base-def/pom.xml
+++ b/ex-pc-base-def/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.hp.sh</groupId>
+	<groupId>com.hp.sh.expv3</groupId>
 	<artifactId>ex-pc-base-def</artifactId>
 	<packaging>jar</packaging>
 	<version>3.0.0-SNAPSHOT</version>
@@ -23,6 +23,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>${springcloud.version}</version>
             <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+			<groupId>com.gitee.hupadev</groupId>
+			<artifactId>hupa-base</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         
 		<!-- springfox-swagger2 -->
