--- a/ex-pc-match/src/main/resources/application.properties
+++ b/ex-pc-match/src/main/resources/application.properties
@@ -1,103 +1,9 @@
-app.server.port=8053
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
-#
-##eureka
-#eureka.instance.ip-address=127.0.0.1
-#feign.hystrix.enabled=false
-#
-##mq
-#spring.rabbitmq.host=192.168.0.63
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-#spring.rabbitmq.listener.simple.acknowledge-mode=manual
-#spring.rabbitmq.publisher-confirms=true
-#spring.rabbitmq.publisher-returns=true
-#spring.rabbitmq.template.mandatory=true
-#
-##Hikari
-#spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-#spring.datasource.hikari.primary.username=test
-#spring.datasource.hikari.primary.password=123456
-#
-#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-#spring.datasource.hikari.primary.minimum-idle=5
-#spring.datasource.hikari.primary.maximum-pool-size=15
-#spring.datasource.hikari.primary.auto-commit=true
-#spring.datasource.hikari.primary.idle-timeout=30000
-#spring.datasource.hikari.primary.pool-name=DatebookHikariCP
-#spring.datasource.hikari.primary.max-lifetime=1800000
-#spring.datasource.hikari.primary.connection-timeout=30000
-#spring.datasource.hikari.primary.connection-test-query=SELECT 1
-#spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
-#
-##redis
-#spring.cache.type=redis
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.password=
-#spring.redis.pool.max-active=1000
-#spring.redis.pool.max-wait=5000
-#spring.redis.pool.max-idle=256
-#spring.redis.pool.min-idle=2
-#spring.redis.timeout=2000ms
-
-#Hikari
-#spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-#spring.datasource.hikari.primary.username=root
-#spring.datasource.hikari.primary.password=root1234
-#
-#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-#spring.datasource.hikari.primary.minimum-idle=5
-#spring.datasource.hikari.primary.maximum-pool-size=15
-#spring.datasource.hikari.primary.auto-commit=true
-#spring.datasource.hikari.primary.idle-timeout=30000
-#spring.datasource.hikari.primary.pool-name=DatebookHikariCP
-#spring.datasource.hikari.primary.max-lifetime=1800000
-#spring.datasource.hikari.primary.connection-timeout=30000
-#spring.datasource.hikari.primary.connection-test-query=SELECT 1
-#spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
-
-
-#mybatis.type-aliases-package=com.hp.sh.expv3.pc.module.trade.entity
-
-spring.datasource.url=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=root1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-suffix=v3
-
 id.dataCenterBits=2
 id.serverBits=8
 id.idTypeBits=5
 id.sequenceBits=7
 
-rmq.nameSrvAddr=192.168.0.47:8678;192.168.0.48:8678
-rmq.nameSpace=gte_${suffix}
-
 pcmatch.id.dataCenterId=0
-pcmatch.id.serverId=31
-pcmatch.id.caller=pcmatch
-
-pcmatch.supportAssetSymbol=BTC__BTC_USD,ETH__ETH_USD
-
-pcmatch.trade.batchSize=2
-
-pcmatch.redis.hostName=192.168.0.68
-pcmatch.redis.password=456
-pcmatch.redis.port=16373
-pcmatch.redis.database=2
-pcmatch.redis.timeout=6000
-pcmatch.redis.minIdle=5
-pcmatch.redis.maxIdle=10
-pcmatch.redis.maxTotal=25
-pcmatch.redis.maxWaitMillis=2000
-pcmatch.redis.testOnBorrow=true
-pcmatch.redis.testOnReturn=true
-pcmatch.redis.testWhileIdle=true
 
 pcmatch.rmq.pcOrderConsumerGroupName=pcOrderMatchConsumer_${asset}_${symbol}
 pcmatch.rmq.pcOrderConsumerInstanceName=pcOrderMatchConsumer_${asset}_${symbol}_${pcmatch.id.serverId}
@@ -114,3 +20,8 @@ pcmatch.rediskey.pcOrderSnapshotRedisKeyPattern=pcOrderSnapshot:${asset}:${symbo
 pcmatch.rediskey.pcOrderSentMqOffsetRedisKeyPattern=orderSentMqOffset:${asset}:${symbol}
 pcmatch.rediskey.pcBookChannelRedisKeyPattern=pc:book:${asset}:${symbol}
 pcmatch.rediskey.pcTradeChannelRedisKeyPattern=pc:trade:${asset}:${symbol}
+
+pcmatch.rediskey.pcOrderMatchedQueueRedisKeyPattern=pcOrderMatchedQueue:${asset}:${symbol}
+pcmatch.rediskey.pcOrderMatchedQueueHeadOffsetRedisKeyPattern=headOffset
+pcmatch.rediskey.pcOrderMatchedQueueEndOffsetRedisKeyPattern=endOffset
+pcmatch.rediskey.pcOrderMatchedQueueSizeRedisKeyPattern=size
