--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.redis.timeout=2000ms
 spring.redis.database=7
 spring.redis.keyPrefix=xxx
 
-redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
 redis.poolConfig.maxTotal=1024
 redis.poolConfig.maxIdle=256
 redis.poolConfig.maxWaitMillis=1000
