--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -8,7 +8,7 @@ feign.hystrix.enabled=false
 #mq
 hp.rocketmq.enabled=true
 hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
-hp.rocketmq.namespace=gte_v3
+hp.rocketmq.namespace=exp_v3
 hp.rocketmq.default.consumer.group=fund-account
 
 #Hikari
