--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -8,7 +8,7 @@ feign.hystrix.enabled=false
 #mq
 hp.rocketmq.enabled=true
 hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
-hp.rocketmq.namespace=gte_v3
+hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
 hp.rocketmq.default_consumer.group=ex-pc-base
 hp.rocketmq.default_producer.group=ex-pc-base
