--- a/ex-pc-match/src/main/resources/application-local.properties
+++ b/ex-pc-match/src/main/resources/application-local.properties
@@ -2,9 +2,9 @@ app.server.port=8053
 
 log.dir=d:/logs/pcmatch3/
 
-suffix=v3-zhang
+suffix=v3-local
 
-spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp${suffix}-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp-pc_${suffix}?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
