获取开仓手续费率

--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -15,9 +15,13 @@ hp.rocketmq.default_producer.group=ex-pc-base
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=test
-spring.datasource.hikari.primary.password=123456
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=root1234
+
+#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+#spring.datasource.hikari.primary.username=root
+#spring.datasource.hikari.primary.password=root1234
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
