--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -13,9 +13,13 @@ hp.rocketmq.default.consumer.group=fund-account
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=test
-spring.datasource.hikari.primary.password=123456
+#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+#spring.datasource.hikari.primary.username=test
+#spring.datasource.hikari.primary.password=123456
+
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=root1234
 
 #Hikari-primary
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -31,9 +35,9 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #Hikari-second
 spring.datasource.hikari.second.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.second.username=test
-spring.datasource.hikari.second.password=123456
+spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.second.username=root
+spring.datasource.hikari.second.password=root1234
 
 
 #bys
@@ -42,18 +46,21 @@ bys.client.merchantId=2
 
 #redis
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=
+spring.redis.host=192.168.0.68
+spring.redis.port=16375
+spring.redis.password=456
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
 spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
-spring.redis.database=6
-spring.redis.keyPrefix=xxx
+spring.redis.database=0
+#spring.redis.keyPrefix=
 
-redis.servers=${spring.redis.host}:${spring.redis.port}
+redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
 redis.poolConfig.maxTotal=1024
 redis.poolConfig.maxIdle=256
 redis.poolConfig.maxWaitMillis=1000
