--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -15,13 +15,10 @@ hp.rocketmq.default_producer.group=ex-pc-base
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=root
-spring.datasource.hikari.primary.password=root1234
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=test
+spring.datasource.hikari.primary.password=123456
 
-#spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-#spring.datasource.hikari.primary.username=root
-#spring.datasource.hikari.primary.password=root1234
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
@@ -36,9 +33,6 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #redis
 spring.cache.type=redis
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.password=
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
