--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -19,7 +19,6 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?us
 spring.datasource.hikari.primary.username=test
 spring.datasource.hikari.primary.password=123456
 
-
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
 spring.datasource.hikari.primary.maximum-pool-size=15
@@ -33,16 +32,16 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #redis
 spring.cache.type=redis
-spring.redis.host=192.168.0.68
-spring.redis.port=16375
-spring.redis.password=456
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
 spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
 spring.redis.database=0
-#spring.redis.keyPrefix=xxx
+spring.redis.keyPrefix=
 
 redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
 redis.poolConfig.maxTotal=1024
