add auto reconsumer at topic delete

--- a/ex-pc-match/src/main/resources/application-local.properties
+++ b/ex-pc-match/src/main/resources/application-local.properties
@@ -15,7 +15,7 @@ rmq.nameSpace=exp_${suffix}
 pcmatch.id.serverId=31
 pcmatch.id.caller=pcmatch
 
-pcmatch.supportAssetSymbol=BTC__BTC_USD,ETH__ETH_USD
+pcmatch.supportAssetSymbol=BTC__BTC_USD,ETH__ETH_USD,EOS__EOS_USD
 
 pcmatch.trade.batchSize=2
 
