--- a/ex-fund-account/src/main/resources/application-bai.properties
+++ b/ex-fund-account/src/main/resources/application-bai.properties
@@ -4,7 +4,7 @@ swagger.host=localhost:${app.server.port}
 hp.rocketmq.namespace=exp_v3-local
 
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
