--- a/ex-pc-base/src/main/resources/application-bai.properties
+++ b/ex-pc-base/src/main/resources/application-bai.properties
@@ -1,3 +1,6 @@
+#
+#app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
+
 #swagger
 swagger.host=localhost:${app.server.port}
 
