--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -6,7 +6,7 @@ feign.hystrix.enabled=false
 
 #mq
 hp.rocketmq.enabled=true
-hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
+hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
 hp.rocketmq.default_consumer.group=ex-pc-base
@@ -41,6 +41,10 @@ spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
 spring.redis.database=0
 spring.redis.keyPrefix=
+
+meta.redis.host=192.168.0.68
+meta.redis.port=16375
+meta.redis.password=456
 
 redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
 redis.poolConfig.maxTotal=1024
