--- a/ex-fund-account-def/pom.xml
+++ b/ex-fund-account-def/pom.xml
@@ -10,6 +10,8 @@
     <description>资金账户API定义</description>
     
 	<properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springboot.version>2.0.3.RELEASE</springboot.version>
 		<springcloud.version>2.0.0.RELEASE</springcloud.version>
