--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -6,11 +6,11 @@ feign.hystrix.enabled=false
 
 #mq
 hp.rocketmq.enabled=true
-hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
+hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
-hp.rocketmq.default_consumer.group=ex-pc-base
-hp.rocketmq.default_producer.group=ex-pc-base
+hp.rocketmq.default_consumer.group=ex-pc-extend
+hp.rocketmq.default_producer.group=ex-pc-extend
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
