查询pc永续合约账户接口

--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -32,6 +32,11 @@ spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #redis
+
+meta.redis.host=192.168.0.68
+meta.redis.port=16375
+meta.redis.password=456
+
 spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
