auto append contract in match

--- a/ex-pc-match/src/main/resources/configs/application-dev.properties
+++ b/ex-pc-match/src/main/resources/configs/application-dev.properties
@@ -34,11 +34,11 @@ pcmatch.rediskey.pcOrderMatchedQueueSizeRedisKeyPattern=size
 
 pcmatch.rediskey.pcContractPattern=pc_contract
 
-log.dir=d:/logs/pcmatch3/
+log.dir=/root/logs/pcmatch3/
 
-suffix=v3-local
+suffix=v3
 
-spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp-pc_${suffix}?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp${suffix}-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -53,9 +53,9 @@ pcmatch.matchGroupId=1
 
 pcmatch.trade.batchSize=2
 
-pcmatch.redis.hostName=192.168.0.190
+pcmatch.redis.hostName=192.168.0.68
 pcmatch.redis.password=456
-pcmatch.redis.port=16379
+pcmatch.redis.port=16373
 pcmatch.redis.database=2
 pcmatch.redis.timeout=6000
 pcmatch.redis.minIdle=5
