add id generator

--- a/ex-pc-match/src/main/resources/application.properties
+++ b/ex-pc-match/src/main/resources/application.properties
@@ -5,8 +5,8 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.typeAliasesPackage=com.hp.sh.expv3.**.entity
 
 id.dataCenterBits=2
-id.serverBits=8
-id.idTypeBits=5
+id.serverBits=5
+id.idTypeBits=8
 id.sequenceBits=7
 
 pcmatch.id.dataCenterId=0
@@ -34,7 +34,7 @@ pcmatch.rediskey.pcOrderMatchedQueueSizeRedisKeyPattern=size
 
 pcmatch.rediskey.pcContractPattern=pc_contract
 
-log.dir=d:/logs/pcmatch3/
+log.dir=d:/logs/pcmatch_${pcmatch.matchGroupId}/
 
 suffix=v3-local
 
