--- a/ex-pc-extend/pom.xml
+++ b/ex-pc-extend/pom.xml
@@ -29,7 +29,7 @@
 		
 		<dependency>
 			<groupId>com.hp.sh.expv3</groupId>
-			<artifactId>ex-pc-base-def</artifactId>
+			<artifactId>ex-pc-base-jar</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		
