--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -2,6 +2,7 @@
 swagger.host=localhost:${app.server.port}
 
 hp.rocketmq.namespace=exp_v3-local
-
+hp.rocketmq.instanceName=w1
 #eureka
 #eureka.instance.ip-address=127.0.0.1
+eureka.instance.namespace=w1
