--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -6,6 +6,7 @@ feign.hystrix.enabled=false
 
 #mq
 hp.rocketmq.enabled=true
+hp.rocketmq.createConsumer=false
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
@@ -52,3 +53,7 @@ redis.poolConfig.maxIdle=256
 redis.poolConfig.maxWaitMillis=1000
 redis.poolConfig.testOnBorrow=true
 redis.poolConfig.testOnReturn=true
+
+
+#pc
+pc.contractGroup=1
