--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -35,6 +35,9 @@ spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?u
 spring.datasource.hikari.second.username=test
 spring.datasource.hikari.second.password=123456
 
+#id
+id.generator.dataCenterId=0
+id.generator.serverId=1
 
 #bys
 bys.server.host=http://192.168.0.13:7080/api/v1
