--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -30,6 +30,10 @@ spring.datasource.hikari.primary.connection-timeout=30000
 spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
+#id
+id.generator.dataCenterId=0
+id.generator.serverId=1
+
 #redis
 spring.cache.type=redis
 spring.redis.host=localhost
