--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -41,7 +41,7 @@ id.generator.serverId=1
 
 #bys
 bys.server.host=http://192.168.0.13:7080/api/v1
-bys.client.merchantId=2
+bys.client.merchantId=1
 
 #redis
 spring.cache.type=redis
@@ -55,6 +55,10 @@ spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
 spring.redis.database=0
 #spring.redis.keyPrefix=
+
+meta.redis.host=192.168.0.68
+meta.redis.port=16375
+meta.redis.password=456
 
 redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
 redis.poolConfig.maxTotal=1024
