--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -42,6 +42,7 @@ id.generator.serverId=1
 #bys
 bys.server.host=http://192.168.0.13:7080/api/v1
 bys.client.merchantId=1
+bys.client.secret=6SKW49tZX12uyvNMoG
 
 #redis
 spring.cache.type=redis
