--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -44,6 +44,14 @@ bys.server.host=http://192.168.0.13:7080/api/v1
 bys.client.merchantId=1
 bys.client.secret=6SKW49tZX12uyvNMoG
 
+#c2c
+plpay.server.host=http://gpayotc.com/client
+plpay.server.shopNo=
+plpay.server.signType=MD5
+plpay.server.md5Key=pkriDZoEwB
+
+
+
 #redis
 spring.cache.type=redis
 spring.redis.host=localhost
