--- a/ex-fund-account/pom.xml
+++ b/ex-fund-account/pom.xml
@@ -33,6 +33,12 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+
 	</dependencies>
     
 
