--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -46,7 +46,7 @@ bys.client.secret=6SKW49tZX12uyvNMoG
 
 #c2c
 plpay.server.host=http://gpayotc.com/client/tracnce
-plpay.server.shopNo=
+plpay.server.shopNo=291
 plpay.server.signType=MD5
 plpay.server.md5Key=pkriDZoEwB
 
