--- a/ex-pc-extend/pom.xml
+++ b/ex-pc-extend/pom.xml
@@ -32,7 +32,13 @@
 			<artifactId>ex-pc-base-jar</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
+        <dependency>
+            <!-- pageHelper分页插件 -->
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 	</dependencies>
 	
 
