--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -51,7 +51,7 @@ plpay.server.signType=MD5
 plpay.server.md5Key=pkriDZoEwB
 
 #\u57DF\u540D+\u7AEF\u53E3\u53F7
-expv3.base.url=http://192.168.0.84:8051
+expv3.base.url=https://ex-fund.icocrop.io/
 
 #redis
 spring.cache.type=redis
