--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -45,7 +45,7 @@ bys.client.merchantId=1
 bys.client.secret=6SKW49tZX12uyvNMoG
 
 #c2c
-plpay.server.host=http://gpayotc.com/client/tracnce
+plpay.server.host=http://182.162.20.46:88/client/tracnce
 plpay.server.shopNo=291
 plpay.server.signType=MD5
 plpay.server.md5Key=pkriDZoEwB
