新增查询最新成交记录接口

--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -49,6 +49,7 @@ plpay.server.host=http://182.162.20.46:88/client/tracnce
 plpay.server.shopNo=291
 plpay.server.signType=MD5
 plpay.server.md5Key=pkriDZoEwB
+plpay.server.customerId=lsb19841626045
 
 #\u57DF\u540D+\u7AEF\u53E3\u53F7
 expv3.base.url=https://ex-fund.icocrop.io/
