--- a/ex-fund-account/src/main/resources/application-bai.properties
+++ b/ex-fund-account/src/main/resources/application-bai.properties
@@ -2,6 +2,7 @@
 #app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
 #swagger
 swagger.host=localhost:${app.server.port}
+expv3.base.url=http://localhost
 
 hp.rocketmq.namespace=exp_v3-local
 
