--- a/ex-common/pom.xml
+++ b/ex-common/pom.xml
@@ -35,7 +35,13 @@
 		    <artifactId>redisson</artifactId>
 		    <version>3.9.1</version>
 		</dependency>
-		        
+
+        <dependency>
+            <!-- pageHelper分页插件 -->
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 	</dependencies>
 
 	<distributionManagement>
