--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -50,6 +50,7 @@ plpay.server.shopNo=291
 plpay.server.signType=MD5
 plpay.server.md5Key=pkriDZoEwB
 plpay.server.customerId=lsb19841626045
+plpay.server.c2c_fee_ratio=0.025
 
 #\u57DF\u540D+\u7AEF\u53E3\u53F7
 expv3.base.url=https://ex-fund.icocrop.io/
