--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -12,3 +12,9 @@ swagger.host=192.168.0.84:${app.server.port}
 
 #mq
 hp.rocketmq.namespace=exp_v3
+
+#redis
+spring.cache.type=redis
+spring.redis.host=192.168.0.68
+spring.redis.port=16375
+spring.redis.password=456
