--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -6,7 +6,7 @@ feign.hystrix.enabled=false
 
 #mq
 hp.rocketmq.enabled=true
-hp.rocketmq.namesrvAddr=192.168.0.47:8678;192.168.0.48:8678
+hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.default.consumer.group=fund-account
 
@@ -52,7 +52,7 @@ plpay.server.md5Key=pkriDZoEwB
 plpay.server.customerId=lsb19841626045
 plpay.server.c2c_fee_ratio=0.025
 
-#\u57DF\u540D+\u7AEF\u53E3\u53F7
+#\u57df\u540d+\u7aef\u53e3\u53f7
 expv3.base.url=https://ex-fund.icocrop.io/
 
 #redis
