--- a/ex-pc-base/src/main/resources/application-dev.properties
+++ b/ex-pc-base/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.hikari.primary.password=root1234
 
 #Hikari-second
 spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.second.username=root
+spring.datasource.hikari.second.username=expv3
 spring.datasource.hikari.second.password=root1234
 
 #swagger
