--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -6,3 +6,8 @@ hp.rocketmq.instanceName=w1
 #eureka
 #eureka.instance.ip-address=127.0.0.1
 eureka.instance.namespace=w1
+
+
+#db
+spring.datasource.hikari.primary.username=expv3
+spring.datasource.hikari.primary.password=root1234
