--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 #swagger
-swagger.host=localhost:${app.server.port}
+swagger.host=
 
 hp.rocketmq.namespace=exp_v3-local
 hp.rocketmq.instanceName=w1
