--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -1,3 +1,7 @@
+
+app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
+
+#db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://172.31.40.126:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
