--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -68,9 +68,9 @@ spring.redis.timeout=2000ms
 spring.redis.database=0
 #spring.redis.keyPrefix=
 
-meta.redis.host=192.168.0.68
-meta.redis.port=16375
-meta.redis.password=456
+meta.redis.host=${spring.redis.host}
+meta.redis.port=${spring.redis.port}
+meta.redis.password=${spring.redis.password}
 
 redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
 redis.poolConfig.maxTotal=1024
