--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -11,3 +11,6 @@ eureka.instance.namespace=w1
 #db
 spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
+
+#cron
+cron.liq=0 0/10 * * * ?
