--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -32,10 +32,9 @@ spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #redis
-
-meta.redis.host=192.168.0.68
-meta.redis.port=16375
-meta.redis.password=456
+meta.redis.host=${spring.redis.host}
+meta.redis.port=${spring.redis.port}
+meta.redis.password=${spring.redis.password}
 
 spring.cache.type=redis
 spring.redis.host=localhost
