--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -14,3 +14,8 @@ spring.datasource.hikari.primary.password=root1234
 
 #cron
 cron.liq=0 0/10 * * * ?
+
+#redis
+meta.redis.host=192.168.0.68
+meta.redis.port=16375
+meta.redis.password=456
