--- a/ex-pc-extend/src/main/resources/application-local.properties
+++ b/ex-pc-extend/src/main/resources/application-local.properties
@@ -9,3 +9,8 @@ spring.redis.database=0
 
 
 hp.rocketmq.namespace=exp_v3-local
+
+#db
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=root1234
