--- a/ex-pc-extend/src/main/resources/application-dev.properties
+++ b/ex-pc-extend/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
 #swagger
-swagger.host=192.168.0.84:${app.server.port}
+swagger.host=
 
 #mq
 hp.rocketmq.namespace=exp_v3
