--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -15,7 +15,7 @@ spring.datasource.hikari.second.password=root1234
 swagger.host=
 
 #mq
-hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namespace=exp
 hp.rocketmq.namesrvAddr=172.31.43.16:9876
 
 #redis
