--- a/ex-pc-base/src/main/resources/application-prod.properties
+++ b/ex-pc-base/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 #mq
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
-hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
 
 #redis
